--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,44 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+	<title>James Sasha and Dakota's Awesome Color Web Synth Thingy</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width= device width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </head>
 
 <body>
 	<script type="text/javascript" src="https://tonejs.github.io/CDN/latest/Tone.js"></script>
 	<script src="tone-test.js"></script>
+	<div class="container">
+		<h1 id="header">Are You <strong><em>Fucking</em></strong> Ready?</h1>
+	<br>
+	<div class="row">
+		<div class="col-md-4">
+			<img src="James.jpg" class="img-circle" width="300" height="300">
+			<blockquote>
+				<p>Boobs...</p>
+				<footer>James</footer>
+			</blockquote>
+		</div>
+		<div class="col-md-4">
+			<img src="Sasha.jpg" class="img-circle" width="300" height="300">
+			<blockquote>
+				<p>Are you fucking kidding me James?</p>
+				<footer>Sasha</footer>
+			</blockquote>
+		</div>
+		<div class="col-md-4">
+			<img src="Dakota.jpg" class="img-circle" width="300" height="300">
+			<blockquote>
+				<p>I have no idea what's going on. ¯\_(ツ)_/¯</p>
+				<footer>Dakota</footer>
+			</blockquote>
+		</div>
+	</div>
+	<div class="container"></div>
+		<h1 id="plebian"><strong>Now Play With Our Color-Synth, Plebian.</strong></h1>
+	</div>
 </body>
