--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
           or <a href="http://www.google.com/chromeframe/?redirect=true">activate 
           Google Chrome Frame</a> to improve your experience.</p>
     <![endif]-->
-	<div class="container">
-		<h1 id="header">Are You <strong><em>Fucking</em></strong> Ready?</h1>
+	<div class="container-fluid"></div>
+        <h1 id="header">Soundwave Color Filter</h1>
+<!-- 		<h1 id="header">Are You <strong><em>Fucking</em></strong> Ready?</h1>
 		<br>
 		<div class="row">
 			<div class="col-md-4">
@@ -48,9 +49,9 @@
 			</div>
 		</div>
 		<div class="container"></div>
-		<h1 id="plebian"><strong>Now Play With Our Color-Synth, Plebian.</strong></h1>
+		<h1 id="plebian"><strong>Now Play With Our Color-Synth, Plebian.</strong></h1> -->
         <canvas id="canvas"></canvas>
-    </div>
+        <h1 id="plebian">By Dakota, James, and Sasha</h1>
     
     <!-- SCRIPTS SCRIPTS SCRIPTS SCRIPTS SCRIPTS SCRIPTS! -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
