--- a/index.html
+++ b/index.html
@@ -2,28 +2,30 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>James Sasha and Dakota's Awesome Color Web Synth Thingy</title>
-    <meta name="description" content="Color Picker" />
-    <meta name="viewport" content="width= device width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
 
+<head>
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<title>James Sasha and Dakota's Awesome Color Web Synth Thingy</title>
+	<meta name="description" content="Color Picker" />
+	<meta name="viewport" content="width= device width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 </head>
 
 <body>
-    <!--[if lt IE 7]>
+	<!--[if lt IE 7]>
         <p class="chromeframe">You are using an <strong>outdated</strong> 
           browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> 
           or <a href="http://www.google.com/chromeframe/?redirect=true">activate 
           Google Chrome Frame</a> to improve your experience.</p>
     <![endif]-->
 	<div class="container-fluid"></div>
-        <h1 id="header">Soundwave Color Filter</h1>
-<!-- 		<h1 id="header">Are You <strong><em>Fucking</em></strong> Ready?</h1>
+	<h1 id="header">Soundwave Color Filter</h1>
+	<!-- 		<h1 id="header">Are You <strong><em>Fucking</em></strong> Ready?</h1>
 		<br>
 		<div class="row">
 			<div class="col-md-4">
@@ -50,16 +52,17 @@
 		</div>
 		<div class="container"></div>
 		<h1 id="plebian"><strong>Now Play With Our Color-Synth, Plebian.</strong></h1> -->
-        <canvas id="canvas"></canvas>
-        <h1 id="plebian">By Dakota, James, and Sasha</h1>
-    
-    <!-- SCRIPTS SCRIPTS SCRIPTS SCRIPTS SCRIPTS SCRIPTS! -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" 
-    integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://tonejs.github.io/CDN/latest/Tone.js"></script>
-    <script src="utils.js"></script>
-    <script src="tone-test.js"></script>
-    <script src="color-picker.js"></script>
+	<canvas id="canvas"></canvas>
+	<h1 id="plebian">By Dakota, James, and Sasha</h1>
+	<!-- SCRIPTS SCRIPTS SCRIPTS SCRIPTS SCRIPTS SCRIPTS! -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script src="https://d3js.org/d3.v4.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="https://tonejs.github.io/CDN/latest/Tone.js"></script>
+	<script src="utils.js"></script>
+	<script src="tone-test.js"></script>
+	<script src="color-picker.js"></script>
+	<div id="toolbar">
+		<input id="clickMe" type="button" value="Play/Stop" onclick="trigger();" />
+	</div>
 </body>
