Making things centered and pretty for the presentation

--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js">
-<!--<![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 
 <head>
 	<meta charset="utf-8" />
@@ -24,45 +22,20 @@
           Google Chrome Frame</a> to improve your experience.</p>
     <![endif]-->
 	<div class="container-fluid"></div>
-	<h1 id="header">Soundwave Color Filter</h1>
-	<!-- 		<h1 id="header">Are You <strong><em>Fucking</em></strong> Ready?</h1>
-		<br>
-		<div class="row">
-			<div class="col-md-4">
-				<img src="James.jpg" class="img-circle" width="300" height="300">
-				<blockquote>
-					<p>Boobs...</p>
-					<footer>James</footer>
-				</blockquote>
-			</div>
-			<div class="col-md-4">
-				<img src="Sasha.jpg" class="img-circle" width="300" height="300">
-				<blockquote>
-					<p>Are you fucking kidding me James?</p>
-					<footer>Sasha</footer>
-				</blockquote>
-			</div>
-			<div class="col-md-4">
-				<img src="Dakota.jpg" class="img-circle" width="300" height="300">
-				<blockquote>
-					<p>I have no idea what's going on. ¯\_(ツ)_/¯</p>
-					<footer>Dakota</footer>
-				</blockquote>
-			</div>
-		</div>
-		<div class="container"></div>
-		<h1 id="plebian"><strong>Now Play With Our Color-Synth, Plebian.</strong></h1> -->
-	<canvas id="canvas"></canvas>
-	<h1 id="plebian">By Dakota, James, and Sasha</h1>
-	<!-- SCRIPTS SCRIPTS SCRIPTS SCRIPTS SCRIPTS SCRIPTS! -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-	<script src="https://d3js.org/d3.v4.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="https://tonejs.github.io/CDN/latest/Tone.js"></script>
-	<script src="utils.js"></script>
-	<script src="tone-test.js"></script>
-	<script src="color-picker.js"></script>
-	<div id="toolbar">
-		<input id="clickMe" type="button" value="Play/Stop" onclick="trigger();" />
-	</div>
+	<h1 id="header">Synth Color Filter</h1>
+    <canvas id="canvas"></canvas>
+    <div id="toolbar">
+        <input id="clickMe" type="button" style="font-size: 24px;" value="Play/Stop" onclick="trigger();" />
+    </div>
+    <div id="plebian">Made with ♥ at the NYC Monthly Music Hackathon.</div>
+
+    <!-- SCRIPTS SCRIPTS SCRIPTS SCRIPTS SCRIPTS SCRIPTS! -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" 
+    integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://tonejs.github.io/CDN/latest/Tone.js"></script>
+    <script src="utils.js"></script>
+    <script src="tone-test.js"></script>
+    <script src="color-picker.js"></script>
 </body>
